[package]
name = "rdir-encoding"
version = "0.1.0"
authors = ["Marcio Giaxa <i@mgxm.me>"]
license = "Apache-2.0"
repository = "https://github.com/mgxm/rdir-encoding/"
description = "Run Lenght, Delta, Integer and Recursive Indexing encoding"
readme = "README.md"

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
itertools = "0.7"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
